# Watson

./: Makefile  pyproject.toml  tox.ini
scripts/: fuzzer.py  gen-cli-docs.py
tests/: __init__.py  conftest.py  test_autocompletion.py  test_cli.py  test_fullmoon.py  test_utils.py  test_watson.py
tests/resources/: frames-with-conflict.json
tests/resources/autocompletion/: frames.json
watson/: autocompletion.py  cli.py  config.py  frames.py  fullmoon.py  utils.py  watson.py
