[tool.poetry]
name = "watson"
version = "2.1.0"
description = "A wonderful CLI to track your time!"
authors = ["TailorDev <contact@tailordev.fr>"]
license = "MIT"
readme = "README.rst"
include = [
    { path = "CHANGELOG.md" },
    { path = "CONTRIBUTING.md" },
    { path = "Makefile" },
    { path = "tox.ini" },
    { path = "watson.*" },
    { path = "pytest.ini" },
    { path = "tests" },
    { path = "mkdocs.yml" },
    { path = "docs" },
    { path = "scripts" },
]
packages = [{ include = "watson" }]
keywords = [
    "watson",
    "timetracker",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Customer Service",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
watson = "watson.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
arrow = "^1.3.0"
colorama = {version = "^0.4.6", platform = "win32"}
click-didyoumean = "^0.3.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-datafiles = "^3.0.0"
pytest-runner = "^6.0.1"
pytest-mock = "^3.14.0"
py = "^1.11.0"
tox = "^4.18.0"
mkdocs = "^1.6.0"
mkdocs-bootswatch = "^1.1"
ruff = "^0.6.1"

[tool.poetry.group.extras-dev]
optional = true

[tool.poetry.group.extras-dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["watson", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = [
    # undocumented-public-module
    "D100",
    # undocumented-public-class
    "D101",
    # undocumented-public-method
    "D102",
    # undocumented-public-function
    "D103",
    # undocumented-public-package
    "D104",
    # undocumented-magic-method
    "D105",
    # undocumented-public-init
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    # assert
    "S101",
]
"watson/cli.py" = [
    # See https://click.palletsprojects.com/en/8.1.x/documentation/#preventing-rewrapping
    # escape-sequence-in-docstring
    "D301",
    # blank-lines-between-headers-and-contents
    "D412",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
